backend/partnerorderprovider/src/main/k8s/api-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: interface
  labels:
    istio-injection: enabled
