backend/partnerorderprovider/src/main/k8s/redpanda-console-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redpanda-console-deployment
  namespace: queue
  labels:
    app: redpanda-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redpanda-console
  template:
    metadata:
      labels:
        app: redpanda-console
    spec:
      containers:
        - name: redpanda-console
          image: redpandadata/console:v2.5.2
          ports:
            - containerPort: 8080
