backend/partnerorderprovider/src/main/k8s/biopro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: partner-order-provider-service-service
  namespace: interface
spec:
  selector:
    app: partner-order-provider-service
  ports:
    - name: http
      port: 8080
