backend/partnerorderprovider/src/main/k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: id
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
