backend/partnerorderprovider/src/main/k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interface-ingress
  namespace: interface
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: interface.local.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: partner-order-provider-service-service
                port:
                  number: 8080
